# pymud-ss13

./: .gitignore  .replit  AGENTS.md  CHANGELOG.md  PROJECT_INVENTORY.md  PR_ANALYSIS.md  README.md  STATUS.md  TASKS.md  TUI_IMPROVEMENTS.md  account_system.py  action_queue.py  agent_write.sh  behave.ini  cli.py  combined_server.py  command_spec.py  config.yaml  connection.py  engine.py  events.py  find_action_items.prompt.yml  integration.py  mkdocs.yml  mod_manager.py  mud_server.py  mud_websocket_server.py  mudpy_api.py  mudpy_interface.py  mudpy_interface.py.bak  parser.py  pathfinding.py  performance.py  persistence.py  pyproject.toml  pytest.ini  random_events.py  replit.nix  requirements.txt  run_server.py  (+11 more)
attached_assets/: Pasted--Implementation-Steps-Next-Actions-This-document-walks-through-concrete-implementation-steps-com-1744871801604.txt  Pasted--Integrating-Lessons-from-Lament-MUD-EmpireMUD-Both-Lament-MUD-a-MUSH-style-server-and-E-1744872253248.txt  Pasted--Ship-Control-Command-Reference-inspired-by-Miriani-MUD-Bringing-spaceship-control-into-pym-1744872768214.txt  Pasted--pymud-ss13-Command-Reference-A-comprehensive-list-of-player-facing-commands-organized-by-categor-1744872231368.txt  Pasted--pymud-ss13-Development-Roadmap-Objectives-Build-a-lightweight-Python-MUD-engine-with-SS13-1744863938412.txt  Pasted--pymud-ss13-Updated-Project-Plan-Objectives-Modern-ASGI-backend-FastAPI-Uvicorn-Py-1744871752211.txt  Pasted-Excellent-Let-s-set-up-a-custom-starter-template-for-Mudpy-that-includes-Persistent-storage-usi-1744861616832.txt  Pasted-Here-s-a-step-by-step-refactor-of-your-WebSocket-server-so-it-s-cleanly-decoupled-from-the-engine-an-1744868201835.txt  Pasted-Raw-WebSockets-a-hand-rolled-loop-tend-to-end-in-two-things-dead-connections-nobody-notices-and--1744869805666.txt  Pasted-You-ve-made-a-great-start-your-pymud-ss13-repo-already-Wraps-the-Mudpy-core-in-a-WebSocket-int-1744863925427.txt
commands/: __init__.py  admin.py  ai.py  aliases.py  antag.py  bartender.py  basic.py  botanist.py  cargo.py  chef.py  chemist.py  circuit.py  combat.py  comms.py  consoles.py  debug.py  doctor.py  engineer.py  geneticist.py  interaction.py  inventory.py  job.py  movement.py  observation.py  requisition.py  research.py  security.py  social.py  system.py  terminal.py  virologist.py
components/: __init__.py  access.py  ai.py  camera.py  circuit.py  container.py  door.py  fluid.py  id_card.py  item.py  lathe.py  maintenance.py  medical.py  motion_sensor.py  npc.py  player.py  power_consumer.py  replica_pod.py  (+3 more)
mudpy/: .codespellrc  .gitignore  .yamllint  LICENSE  README  pyproject.toml  setup.cfg  setup.py  tox.ini
mudpy/doc/source/: admin.rst  api.rst  changelog.rst  clients.rst  coder.rst  conf.py  configuration.rst  data_model.rst  index.rst  install.rst  license.rst
mudpy/etc/: banner.txt  login.txt  mudpy.yaml
mudpy/mudpy/: __init__.py  command.py  daemon.py  data.py  menu.py  misc.py  password.py  telnet.py  version.py
mudpy/mudpy/tests/: selftest.py
mudpy/mudpy/tests/fixtures/: test_daemon.yaml
mudpy/sample/: __init__.yaml  area.yaml  prop.yaml
mudpy/share/: archetype.yaml  command.yaml  menu.yaml
(+211 files in other folders)
