[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.1",
    "websockets>=15.0.1",
]
