[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.1",
    "websockets>=15.0.1",
    "rapidfuzz>=3.13.0",
    "psutil>=5.9.8",
    "RestrictedPython>=8.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "rich>=14.2.0",
    "textual>=6.6.0",
    "d20>=1.1.2",
    "requests>=2.32.5",
    "pytest-benchmark>=5.2.3",
]
